Add com.sun.jndi.dns opens needed for the server browser to work